# beam

./: .travis.yml  CMakeLists.txt  appveyor.yml
android/: CMakeLists.txt  WalletJNI.java  WalletListenerJNI.java  jni.cpp  jni.java
android-application/: .gitignore  build.gradle
android-application/app/: build.gradle
android-application/app/src/main/: AndroidManifest.xml
android-application/app/src/main/res/color/: receive_selector.xml  restore_selector.xml  send_selector.xml
android-application/app/src/main/res/drawable/: beam.xml  button_proceed.xml  edit_text_underline.xml  ic_received.xml  ic_sent.xml  menu_blockchain_info.xml  status.xml  wallet_button_receive.xml  wallet_button_send.xml
android-application/app/src/main/res/layout/: toolbar.xml  (+14 more)
android/com/mw/beam/beamwallet/core/: Api.java  SystemState.java  TxDescription.java  Utxo.java  Wallet.java  WalletListener.java
android/com/mw/beam/beamwallet/core/entities/: TxDescription.java  TxPeer.java  Wallet.java  WalletAddress.java  WalletListener.java
android/com/mw/beam/beamwallet/core/listeners/: WalletListener.java
android/com/senlainc/beamwallet/core/: Api.java
android/unittests/: CMakeLists.txt
beam/: cli.cpp
core/: block_crypt.cpp  block_crypt.h
node/: node.cpp  node.h
pow/: CMakeLists.txt  equihash.cpp  equihash_gpu.cpp
pow/impl/: equihash_gpu.cpp  equihash_gpu.cu  equihash_gpu.h
pow/unittests/: equihash_test.cpp
sqlite/: CMakeLists.txt
utility/: CMakeLists.txt  logger.cpp
utility/io/: libuv.cmake  reactor.cpp
wallet/: wallet.cpp  wallet_db.h  wallet_transaction.cpp
(+79 files in other folders)
